Fix demo box appearing above intro text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,10 @@ html, body {
   user-select: none;
 }
 
+#screen {
+  position: relative;
+}
+
 .screen {
   font-family: 'Courier New', Courier, monospace;
 }
