--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,11 @@
     <div class="box">
       <header>
         <div class="container">
+          <h1>Ascii Lemmings</h1>
           <a href="/">[ Game ]</a>
           - <a href="{{ site.github.repository_url }}">[ Code ]</a>
+          - <a href="/how-to-play.html">[ How to Play ]</a>
+          - <a href="/about.html">[ About ]</a>
           {% if site.show_downloads %}
             - <a href="{{ site.github.zip_url }}" class="btn">[ zip ]</a>
             - <a href="{{ site.github.tar_url }}" class="btn">[ tar.gz ]</a>
