--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,10 @@
       <header>
         <div class="container">
           <h1>Ascii Lemmings</h1>
-          <a href="/">[ Game ]</a>
+          <a href="{{ '/' | relative_url }}">[ Game ]</a>
           - <a href="{{ site.github.repository_url }}">[ Code ]</a>
-          - <a href="/how-to-play.html">[ How to Play ]</a>
-          - <a href="/about.html">[ About ]</a>
+          - <a href="{{ '/' | relative_url }}/how-to-play.html">[ How to Play ]</a>
+          - <a href="{{ '/' | relative_url }}/about.html">[ About ]</a>
           {% if site.show_downloads %}
             - <a href="{{ site.github.zip_url }}" class="btn">[ zip ]</a>
             - <a href="{{ site.github.tar_url }}" class="btn">[ tar.gz ]</a>
