Send some links to a new tab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <div class="container">
           <h1>Ascii Lemmings</h1>
           <a href="{{ '/' | relative_url }}">[ Game ]</a>
-          - <a href="{{ site.github.repository_url }}">[ Code ]</a>
+          - <a href="{{ site.github.repository_url }}" target="_blank">[ Code ]</a>
           - <a href="{{ '/' | relative_url }}/how-to-play.html">[ How to Play ]</a>
           - <a href="{{ '/' | relative_url }}/about.html">[ About ]</a>
           {% if site.show_downloads %}
