--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
-    <link rel="apple-touch-icon" sizes="76x76" href="{{ '/' | relative_url | 'favicon' | 'apple-touch-icon.png' }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/' | relative_url | 'favicon' | 'favicon-32x32.png' }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/' | relative_url | 'favicon' | 'favicon-16x16.png' }}">
-    <link rel="manifest" href="{{ '/' | relative_url | 'favicon' | 'site.webmanifest' }}">
-    <link rel="mask-icon" href="{{ '/' | relative_url | 'favicon' | 'safari-pinned-tab.svg" color="#5bbad5' }}">
-    <link rel="shortcut icon" href="{{ '/' | relative_url | 'favicon' | 'favicon.ico' }}">
-    <meta name="msapplication-config" content="{{ '/' | relative_url | 'favicon' | 'browserconfig.xml' }}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ '/' | relative_url }}favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/' | relative_url }}favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/' | relative_url }}favicon/favicon-16x16.png">
+    <link rel="manifest" href="{{ '/' | relative_url }}favicon/site.webmanifest">
+    <link rel="mask-icon" href="{{ '/' | relative_url }}favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="{{ '/' | relative_url }}favicon/favicon.ico">
+    <meta name="msapplication-config" content="{{ '/' | relative_url }}favicon/browserconfig.xml">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -26,8 +26,8 @@
           <h1>Ascii Lemmings</h1>
           <a href="{{ '/' | relative_url }}">[ Game ]</a>
           - <a href="{{ site.github.repository_url }}" target="_blank">[ Code ]</a>
-          - <a href="{{ '/' | relative_url | 'how-to-play.html' }}">[ How to Play ]</a>
-          - <a href="{{ '/' | relative_url | 'about.html' }}">[ About ]</a>
+          - <a href="{{ '/' | relative_url }}how-to-play.html">[ How to Play ]</a>
+          - <a href="{{ '/' | relative_url }}about.html">[ About ]</a>
           {% if site.show_downloads %}
             - <a href="{{ site.github.zip_url }}" class="btn">[ zip ]</a>
             - <a href="{{ site.github.tar_url }}" class="btn">[ tar.gz ]</a>
