--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
           - <a href="{{ site.github.repository_url }}" target="_blank">[ Code ]</a>
           - <a href="{{ '/' | relative_url }}how-to-play.html">[ How to Play ]</a>
           - <a href="{{ '/' | relative_url }}about.html">[ About ]</a>
+          - <a href="{{ site.github.repository_url }}issues" target="_blank">[ Bugs & Planned Features ]</a>
           {% if site.show_downloads %}
             - <a href="{{ site.github.zip_url }}" class="btn">[ zip ]</a>
             - <a href="{{ site.github.tar_url }}" class="btn">[ tar.gz ]</a>
